syntax = "proto3";

package ru.ololo.db.kv;

service KV {
    rpc get (GetRequest) returns (GetResponse) {}
    rpc put (PutRequest) returns (PutResponse) {}
    rpc cas (CasRequest) returns (CasResponse) {}
}

message GetRequest {
    string key = 1;
}

message PutRequest {
    string key = 1;
    string value = 2;
}

message CasRequest {
    string key = 1;
    string oldValue = 2;
    string newValue = 3;
}

message GetResponse {
    string value = 1;
}

message PutResponse {

}

message CasResponse {
    bool replaced = 1;
}